# virtual-economy

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md
include/: actor.hpp  argparser.hpp  defines.hpp  logic.hpp  market.hpp  object.hpp  order.hpp  pop.hpp  render.hpp  transaction.hpp  veco.hpp  world.hpp
include/gui/: actor_panel.hpp  grid.hpp  object_panel.hpp  order_panel.hpp  render.hpp
src/: object.cpp  pop.cpp  veco.cpp
